@@ -1,5 +1,6 @@
 package project.common;
 
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -19,17 +20,17 @@ import project.entity.product.Producer;
 import project.entity.product.Product;
 import project.entity.product.Stock;
 import project.repository.ProductRepository;
+import project.service.product.StockService;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 @Component
 @Slf4j(topic = "PRODUCT-UTILS")
 public class ProductUtils {
 	@Autowired
 	private ProductRepository productRepo;
+	@Autowired
+	private StockService stockService;
 	@Autowired
 	private ModelMapper modelMapper;
 	private ObjectMapper objectMapper;
@@ -163,6 +164,44 @@ public class ProductUtils {
 //		}
 //	}
 
+	public ProductDto createProductDto(Product p) {
+		ProductDto productDto = new ProductDto();
+		BeanUtils.copyProperties(p, productDto);
+		return productDto;
+	}
+
+	public void setPurchaseComboItem(ProductDto productDto) {
+		PurchaseComboItem purchaseComboItem = new PurchaseComboItem();
+		List<Product> productList;
+		String type = "";
+		try {
+			productList = new ArrayList<>();
+			for (int i = 0; i < 3; i++) {
+				if (i == 0) type = "mouse";
+				if (i == 1) type = "keyboard";
+				if (i == 2) type = "headphone";
+				productList.add(productRepo.findMostPurchaseByType(type));
+			}
+
+			List<SimilarProductDto> spList = new ArrayList<>();
+			SimilarProductDto sp;
+			for (Product p : productList) {
+				if (p != null) {
+					sp = new SimilarProductDto();
+					modelMapper.map(p, sp);
+					sp.setImage(Arrays.stream(p.getImage().split("\\|")).findFirst().orElse(null));
+					spList.add(sp);
+				}
+			}
+
+			purchaseComboItem.setProductList(spList);
+			productDto.setPurchaseComboItem(purchaseComboItem);
+		} catch (IllegalAccessError e) {
+			System.err.println("Purchase Combo Item Is Null!");
+			purchaseComboItem.setProductList(new ArrayList<>());
+		}
+	}
+
 	public void setBlogImageAndContent(BlogDto blogDto, Optional<Blog> blog) {
 		String blogImageStr = "";
 		String blogContentStr = "";
@@ -171,60 +210,62 @@ public class ProductUtils {
 			blogContentStr = blog.get().getContent();
 		}
 		blogDto.setImageList(Optional.ofNullable(blogImageStr)
-				.map(str -> List.of(str.split("\\|")))
-				.orElse(Collections.emptyList()));
+			.map(str -> List.of(str.split("\\|")))
+			.orElse(Collections.emptyList()));
 		blogDto.setContentList(Optional.ofNullable(blogContentStr)
-				.map(str -> List.of(str.split("\\|")))
-				.orElse(Collections.emptyList()));
+			.map(str -> List.of(str.split("\\|")))
+			.orElse(Collections.emptyList()));
+		blogDto.setId(blog.get().getId());
+		blogDto.setHeader(blog.get().getHeader());
 	}
 
-	public StockDto createStockDto(Optional<Stock> stock, long id) {
+	public StockDto createStockDto(Stock stock, long id) {
 		return StockDto.builder()
-				.productId(id)
-				.sold(stock.map(Stock::getSold).orElse(0))
-				.quantity(stock.map(Stock::getQuantity).orElse(0))
-				.build();
+			.productId(id)
+			.sold(stock.getSold())
+			.quantity(stock.getQuantity())
+			.build();
 	}
 
 	public List<SimilarProductDto> findTopSimilarProducts(Product product) {
 		List<Product> productList = productRepo.findTopSimilarByType(product.getType(), product.getId(),
-				PageRequest.of(0, 6));
+			PageRequest.of(0, 6));
 		SimilarProductDto sp;
 		List<SimilarProductDto> list = new ArrayList<>();
 		for (Product p : productList) {
 			sp = new SimilarProductDto();
 			BeanUtils.copyProperties(p, sp);
-//			Optional<Stock> stock = stockRepo.findByProductDetailId(p.getId());
-//			StockDto stockDto = createStockDto(stock, p.getId());
+			Stock stock = stockService.findByProductId(p.getId());
+			StockDto stockDto = createStockDto(stock, p.getId());
 			sp.setImage(List.of(p.getImage().split("\\|")).getFirst());
-//			sp.setStock(stockDto);
+			sp.setStock(stockDto);
 			list.add(sp);
 		}
 		return list;
 	}
 
+	public List<String> getConfigurationsByProductName(String name) {
+		List<String> productDetails = productRepo.getProductDetailsByName(name);
+		List<String> configurations = new ArrayList<>();
+		for (String pDetail : productDetails) {
+			ObjectMapper mapper = new ObjectMapper();
+			try {
+				JsonNode rootNode = mapper.readTree(pDetail);
+				String ram = rootNode.get("ram").asText();
+				String hardDrive = rootNode.get("hardDrive").asText();
+				String cpu = rootNode.get("cpu").asText();
+				String graphicsCard = rootNode.get("graphicsCard").asText();
+				StringBuilder config = new StringBuilder();
+				config.append(ram).append(" | ")
+					.append(hardDrive).append(" | ")
+					.append(cpu).append(" | ")
+					.append(graphicsCard);
+				configurations.add(config.toString());
+			} catch (Exception e) {
+				throw new RuntimeException(e);
+			}
+		}
+		return configurations;
+	}
 
-//	public void switchCase(String type, Product p, ProductDto productDto) {
-//		ProductDetail pDetail = productDetailService.getByProductId(p.getId());
-//		ModelMapper modelMapper = new ModelMapper();
-//
-//		switch (type.toLowerCase()) {
-//			case "laptop" -> {
-//				LaptopDetailDto lDto = modelMapper.map(pDetail, LaptopDetailDto.class);
-//				productDto.setProductDetail(lDto);
-//			}
-//			case "keyboard" -> {
-//				KeyboardDetailDto kDto = modelMapper.map(pDetail, KeyboardDetailDto.class);
-//				productDto.setProductDetail(kDto);
-//			}
-//			case "mouse" -> {
-//				MouseDetailDto mDto = modelMapper.map(pDetail, MouseDetailDto.class);
-//				productDto.setProductDetail(mDto);
-//			}
-//			case "headphone" -> {
-//				HeadphoneDetailDto hDto = modelMapper.map(pDetail, HeadphoneDetailDto.class);
-//				productDto.setProductDetail(hDto);
-//			}
-//		}
-//	}
 }
